i18n/ja/docusaurus-plugin-content-docs/version-9.x/seeding.md
<!-- # Database: Seeding -->
# Database: Seeding

- [Introduction](#introduction)
- [Writing Seeders](#writing-seeders)
    - [Using Model Factories](#using-model-factories)
    - [Calling Additional Seeders](#calling-additional-seeders)
    - [Muting Model Events](#muting-model-events)
- [Running Seeders](#running-seeders)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- Laravel includes the ability to seed your database with data using seed classes. All seed classes are stored in the `database/seeders` directory. By default, a `DatabaseSeeder` class is defined for you. From this class, you may use the `call` method to run other seed classes, allowing you to control the seeding order. -->
Laravel には、シード クラスを使用してデータベースにデータをシードする機能が含まれています。すべてのシード クラスは、`database/seeders` ディレクトリに保存されます。デフォルトでは、`DatabaseSeeder` クラスが定義されています。このクラスから、`call` メソッドを使用して他のシード クラスを実行し、シード順序を制御できます。

> [!NOTE]
> [Mass assignment protection](/docs/9.x/eloquent#mass-assignment) は、データベースのシード処理中に自動的に無効になります。

<a name="writing-seeders"></a>
<!-- ## Writing Seeders -->
## Writing Seeders

<!-- To generate a seeder, execute the `make:seeder` [Artisan command](/docs/9.x/artisan). All seeders generated by the framework will be placed in the `database/seeders` directory: -->
シーダーを生成するには、`make:seeder` [Artisan command](/docs/9.x/artisan) を実行します。フレームワークによって生成されたすべてのシーダーは、`database/seeders` ディレクトリに配置されます。

```shell
php artisan make:seeder UserSeeder
```

<!-- A seeder class only contains one method by default: `run`. This method is called when the `db:seed` [Artisan command](/docs/9.x/artisan) is executed. Within the `run` method, you may insert data into your database however you wish. You may use the [query builder](/docs/9.x/queries) to manually insert data or you may use [Eloquent model factories](/docs/9.x/eloquent-factories). -->
シーダー クラスには、デフォルトでメソッド `run` が 1 つだけ含まれています。このメソッドは、`db:seed` [Artisan command](/docs/9.x/artisan) が実行されるときに呼び出されます。 `run` メソッド内では、必要に応じてデータベースにデータを挿入できます。 [query builder](/docs/9.x/queries) を使用してデータを手動で挿入することも、[Eloquent model factories](/docs/9.x/eloquent-factories) を使用することもできます。

<!-- As an example, let's modify the default `DatabaseSeeder` class and add a database insert statement to the `run` method: -->
例として、デフォルトの `DatabaseSeeder` クラスを変更し、データベース挿入ステートメントを `run` メソッドに追加してみましょう。

```
<?php

namespace Database\Seeders;

use Illuminate\Database\Seeder;
use Illuminate\Support\Facades\DB;
use Illuminate\Support\Facades\Hash;
use Illuminate\Support\Str;

class DatabaseSeeder extends Seeder
{
    /**
     * Run the database seeders.
     *
     * @return void
     */
    public function run()
    {
        DB::table('users')->insert([
            'name' => Str::random(10),
            'email' => Str::random(10).'@gmail.com',
            'password' => Hash::make('password'),
        ]);
    }
}
```

> [!NOTE]
> `run` メソッドのシグネチャ内で必要な依存関係をタイプヒントで指定できます。これらは、Laravel [service container](/docs/9.x/container) を通じて自動的に解決されます。

<a name="using-model-factories"></a>
<!-- ### Using Model Factories -->
### Using Model Factories

<!-- Of course, manually specifying the attributes for each model seed is cumbersome. Instead, you can use [model factories](/docs/9.x/eloquent-factories) to conveniently generate large amounts of database records. First, review the [model factory documentation](/docs/9.x/eloquent-factories) to learn how to define your factories. -->
もちろん、各モデル シードの属性を手動で指定するのは面倒です。代わりに、[model factories](/docs/9.x/eloquent-factories) を使用すると、大量のデータベース レコードを簡単に生成できます。まず、[model factory documentation](/docs/9.x/eloquent-factories) を確認して、ファクトリを定義する方法を学びます。

<!-- For example, let's create 50 users that each has one related post: -->
たとえば、各ユーザーが 1 つの関連投稿を持つ 50 人のユーザーを作成してみましょう。

```
use App\Models\User;

/**
 * Run the database seeders.
 *
 * @return void
 */
public function run()
{
    User::factory()
            ->count(50)
            ->hasPosts(1)
            ->create();
}
```

<a name="calling-additional-seeders"></a>
<!-- ### Calling Additional Seeders -->
### Calling Additional Seeders

<!-- Within the `DatabaseSeeder` class, you may use the `call` method to execute additional seed classes. Using the `call` method allows you to break up your database seeding into multiple files so that no single seeder class becomes too large. The `call` method accepts an array of seeder classes that should be executed: -->
`DatabaseSeeder` クラス内で、`call` メソッドを使用して追加のシード クラスを実行できます。 `call` メソッドを使用すると、単一のシーダー クラスが大きくなりすぎないように、データベース シードを複数のファイルに分割できます。 `call` メソッドは、実行する必要があるシーダー クラスの配列を受け取ります。

```
/**
 * Run the database seeders.
 *
 * @return void
 */
public function run()
{
    $this->call([
        UserSeeder::class,
        PostSeeder::class,
        CommentSeeder::class,
    ]);
}
```

<a name="muting-model-events"></a>
<!-- ### Muting Model Events -->
### Muting Model Events

<!-- While running seeds, you may want to prevent models from dispatching events. You may achieve this using the `WithoutModelEvents` trait. When used, the `WithoutModelEvents` trait ensures no model events are dispatched, even if additional seed classes are executed via the `call` method: -->
シードの実行中、モデルがイベントをディスパッチしないようにしたい場合があります。これは、`WithoutModelEvents` 特性を使用して実現できます。 `WithoutModelEvents` トレイトを使用すると、追加のシード クラスが `call` メソッド経由で実行された場合でも、モデル イベントがディスパッチされなくなります。

```
<?php

namespace Database\Seeders;

use Illuminate\Database\Seeder;
use Illuminate\Database\Console\Seeds\WithoutModelEvents;

class DatabaseSeeder extends Seeder
{
    use WithoutModelEvents;

    /**
     * Run the database seeders.
     *
     * @return void
     */
    public function run()
    {
        $this->call([
            UserSeeder::class,
        ]);
    }
}
```

<a name="running-seeders"></a>
<!-- ## Running Seeders -->
## Running Seeders

<!-- You may execute the `db:seed` Artisan command to seed your database. By default, the `db:seed` command runs the `Database\Seeders\DatabaseSeeder` class, which may in turn invoke other seed classes. However, you may use the `--class` option to specify a specific seeder class to run individually: -->
`db:seed` Artisan コマンドを実行してデータベースをシードできます。デフォルトでは、`db:seed` コマンドは `Database\Seeders\DatabaseSeeder` クラスを実行し、このクラスが他のシード クラスを呼び出す可能性があります。ただし、`--class` オプションを使用して、個別に実行する特定のシーダー クラスを指定できます。

```shell
php artisan db:seed

php artisan db:seed --class=UserSeeder
```

<!-- You may also seed your database using the `migrate:fresh` command in combination with the `--seed` option, which will drop all tables and re-run all of your migrations. This command is useful for completely re-building your database. The `--seeder` option may be used to specify a specific seeder to run: -->
`migrate:fresh` コマンドを `--seed` オプションと組み合わせて使用​​してデータベースをシードすることもできます。これにより、すべてのテーブルが削除され、すべての移行が再実行されます。このコマンドは、データベースを完全に再構築する場合に役立ちます。 `--seeder` オプションは、実行する特定のシーダーを指定するために使用できます。

```shell
php artisan migrate:fresh --seed

php artisan migrate:fresh --seed --seeder=UserSeeder
```

<a name="forcing-seeding-production"></a>
<!-- #### Forcing Seeders To Run In Production -->
#### Forcing Seeders To Run In Production

<!-- Some seeding operations may cause you to alter or lose data. In order to protect you from running seeding commands against your production database, you will be prompted for confirmation before the seeders are executed in the `production` environment. To force the seeders to run without a prompt, use the `--force` flag: -->
シード操作によっては、データが変更されたり失われたりする可能性があります。実稼働データベースに対してシード コマンドを実行しないようにするために、`production` 環境でシーダーが実行される前に確認を求めるプロンプトが表示されます。プロンプトを表示せずにシーダーを強制的に実行するには、`--force` フラグを使用します。

```shell
php artisan db:seed --force
```

